--- a/mlb_totals.ipynb
+++ b/mlb_totals.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +365,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Part 2: Get Earned Run Averages (ERAs)"
+    "# Part 2: Compute Starting Pitcher Earned Run Averages (ERAs)"
    ]
   },
   {
@@ -381,12 +381,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# read in the dataframe that we saved at the conclusion of part 1\n",
-    "df = pd.read_csv(\"df_v1.csv\")\n",
+    "df = pd.read_csv(\"df_v1.csv\", index_col=0)\n",
     "\n",
     "# initialize two new columns in dataframe that will hold pitcher cumulative ERAs\n",
     "df['home_pitcher_pregame_ERA'] = 0.0\n",
@@ -427,13 +427,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "9665"
+       "14504"
       ]
      },
      "metadata": {},
@@ -690,20 +690,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "# read in the dataframe that we saved at the conclusion of part 1\n",
-    "df = pd.read_csv(\"df_v2.csv\")\n",
+    "df = pd.read_csv(\"df_v2.csv\", index_col=0)\n",
     "\n",
     "# read in the dataframe that we saved at the conclusion of part 3\n",
-    "odds_df = pd.read_csv(\"odds_df.csv\")"
+    "odds_df = pd.read_csv(\"odds_df.csv\", index_col=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -713,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -727,40 +727,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "# merge df with odds_df into a new dataframe\n",
     "df = pd.merge(df, odds_df, on=\"id\", how=\"inner\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['Unnamed: 0_x', 'Unnamed: 0.1', 'away_x', 'home_x', 'away_score_x',\n",
-       "       'home_score_x', 'year_x', 'month_x', 'day_x', 'away_pitcher',\n",
-       "       'home_pitcher', 'away_pitcher_IP', 'home_pitcher_IP',\n",
-       "       'away_pitcher_postgame_ERA', 'home_pitcher_postgame_ERA',\n",
-       "       'away_pitcher_ER', 'home_pitcher_ER', 'home_pitcher_pregame_ERA',\n",
-       "       'away_pitcher_pregame_ERA', 'id', 'Unnamed: 0_y', 'away_y', 'home_y',\n",
-       "       'away_score_y', 'home_score_y', 'over_under', 'year_y', 'month_y',\n",
-       "       'day_y'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.columns"
    ]
   },
   {
